# KerberosRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  KerberosRenderer.slnx  Setup.bat
Config/: KerberosBuildSettings.cmake
KerberosEditor/: CMakeLists.txt  imgui.ini
KerberosEditor/Assets/Models/viking_room/: viking_room.glb
KerberosEditor/Assets/Shaders/: compile_shaders.bat  normaldebug.slang  pbrbasic.slang  pbrtextured.slang  skybox.slang
KerberosEditor/Source/: EditorLayer.cpp  EditorLayer.hpp  KerberosEditorApplication.cpp
KerberosEngine/: CMakeLists.txt
KerberosEngine/Source/: Application.cpp  Application.hpp  Buffer.cpp  Buffer.hpp  EntryPoint.hpp  GameObject.hpp  IO.hpp  Layer.hpp  Mesh.hpp  ModelLoader.cpp  ModelLoader.hpp  Textures.cpp  Textures.hpp  Utils.hpp  Vertex.hpp  Vulkan.hpp  VulkanContext.cpp  VulkanContext.hpp  kbrpch.cpp  kbrpch.hpp
KerberosEngine/Source/Assets/: Asset.hpp  AssetManager.hpp  AssetManagerBase.hpp  AssetMetadata.hpp  AssetRegistry.cpp  AssetRegistry.hpp  EditorAssetManager.cpp  EditorAssetManager.hpp  RuntimeAssetManager.cpp  RuntimeAssetManager.hpp
KerberosEngine/Source/Assets/Importers/: AssetImporter.cpp  AssetImporter.hpp  CubemapImporter.cpp  CubemapImporter.hpp  MeshImporter.cpp  MeshImporter.hpp  SoundImporter.cpp  SoundImporter.hpp  TextureImporter.cpp  TextureImporter.hpp
KerberosEngine/Source/Audio/: AudioManager.cpp  AudioManager.hpp  Sound.cpp  Sound.hpp
KerberosEngine/Source/Audio/Windows/: XAudio2AudioManager.cpp  XAudio2AudioManager.hpp
KerberosEngine/Source/Core/: Asserts.hpp  Buffer.hpp  Core.hpp  Scoped.hpp  Timer.hpp  UUID.cpp  UUID.hpp
KerberosEngine/Source/Events/: Event.hpp  KeyPressedEvent.hpp  KeyReleasedEvent.hpp  KeyTypedEvent.hpp  MouseButtonPressedEvent.hpp  MouseButtonReleasedEvent.hpp  MouseMovedEvent.hpp  MouseScrolledEvent.hpp  WindowDropEvent.hpp  WindowResizedEvent.hpp
KerberosEngine/Source/Input/: InputSystem.cpp  InputSystem.hpp  KeyCodes.hpp  MouseButtonCodes.hpp
KerberosEngine/Source/Logging/: Log.cpp  Log.hpp
KerberosEngine/Source/Project/: Project.cpp  Project.hpp
KerberosEngine/Source/Renderer/: BufferLayout.hpp  Material.hpp  MaterialRegistry.cpp  MaterialRegistry.hpp  Mesh.cpp  Mesh.hpp  SkyboxUtils.cpp  SkyboxUtils.hpp  Vertex.hpp
KerberosEngine/Source/Renderer/Shaders/: Shader.cpp  Shader.hpp  ShaderDataType.hpp  ShaderEntryPoints.hpp  SlangCompiler.cpp  SlangCompiler.hpp
KerberosEngine/Source/Renderer/Textures/: Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  TextureCube.cpp  TextureCube.hpp
KerberosEngine/Source/Renderer/VMA/: VMA.cpp  VMA.hpp
KerberosEngine/Source/Scene/: Node.hpp
KerberosEngine/Source/Scene/Camera/: Camera.hpp  EditorCamera.cpp  EditorCamera.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp
KerberosEngine/Source/Serialization/: ProjectSerializer.cpp  ProjectSerializer.hpp
KerberosEngine/Source/Utils/: MemoryBudget.cpp  MemoryBudget.hpp  SystemOperations.hpp  VulkanHelpers.hpp
KerberosEngine/Source/Utils/Windows/: WindowsSystemOperations.cpp
KerberosRenderer/: KerberosRenderer.vcxproj  KerberosRenderer.vcxproj.filters  imgui.ini
KerberosRenderer/assets/cache/shaders/: genbrdflut.spv  irradiancecube.spv  normaldebug.spv  pbrbasic.spv  prefilterenvmap.spv  shadowmap.spv  simple.spv  skybox.spv
KerberosRenderer/assets/shaders/: compile_shaders.bat  genbrdflut.slang  genbrdflut.spv  irradiancecube.slang  irradiancecube.spv  normaldebug.slang  normaldebug.spv  pbrbasic.slang  pbrbasic.spv  prefilterenvmap.slang  prefilterenvmap.spv  shadowmap.slang  shadowmap.spv  simple.slang  simple.spv  skybox.slang  skybox.spv
KerberosRenderer/src/: Application.cpp  Application.hpp  Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  GameLayer.cpp  GameLayer.hpp  GameObject.hpp  Layer.hpp  Mesh.cpp  Mesh.hpp  ModelLoader.cpp  ModelLoader.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Textures.cpp  Textures.hpp  Utils.hpp  Vertex.hpp  VulkanContext.cpp  VulkanContext.hpp  io.hpp  main.cpp  pch.hpp
KerberosRenderer/src/Core/: Core.hpp
KerberosRenderer/src/Renderer/: Material.hpp  MaterialRegistry.cpp  MaterialRegistry.hpp  SkyboxUtils.cpp  SkyboxUtils.hpp
KerberosRenderer/src/Renderer/Shaders/: Shader.cpp  Shader.hpp  ShaderEntryPoints.hpp  SlangCompiler.cpp  SlangCompiler.hpp
KerberosRenderer/src/Scene/: Node.hpp
KerberosRenderer/src/Scene/Camera/: Camera.hpp  EditorCamera.cpp  EditorCamera.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp
KerberosRenderer/src/Utils/: MemoryBudget.cpp  MemoryBudget.hpp
KerberosRenderer/src/events/: Event.hpp  KeyPressedEvent.hpp  KeyReleasedEvent.hpp  KeyTypedEvent.hpp  MouseButtonPressedEvent.hpp  MouseButtonReleasedEvent.hpp  MouseMovedEvent.hpp  MouseScrolledEvent.hpp  WindowDropEvent.hpp  WindowResizedEvent.hpp
KerberosRenderer/src/input/: InputSystem.cpp  InputSystem.hpp  KeyCodes.hpp  MouseButtonCodes.hpp
KerberosRenderer/src/logging/: Log.cpp  Log.hpp
KerberosRenderer/src/shaders/: compile_shaders.bat  pbrbasic.slang  pbrbasic.spv  shadowmap.slang  shadowmap.spv  simple.slang  simple.spv
